# hgrow

./: .gitignore  main.py  pyproject.toml
hgrow/: __init__.py  batch.py  entity.py  main.py  mode.py  plot.py  storage.py
